# metarouter

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PROJECT_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  test_router.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: router.yaml
examples/: README.md  continue_dev.md  curl_examples.sh  python_client.py  streaming_example.py
src/metarouter/: __init__.py  main.py
src/metarouter/api/: routes.py  schemas.py
src/metarouter/cache/: __init__.py  benchmarks.py  performance.py
src/metarouter/config/: settings.py
src/metarouter/lmstudio/: __init__.py  client.py  models.py
src/metarouter/routing/: __init__.py  phi4_selector.py  router.py  router_selector.py
